src/objects/Decode_Object__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Decode Object</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Value__c</columns>
        <columns>Code__c</columns>
        <columns>Order__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>bulk</label>
    </listViews>
    <nameField>
        <label>Decode Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Decode Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>